@@ -19,6 +19,10 @@ static const char *const fmt2_strings[] = {
 	"HOME=%(env HOME)\n",
 	"USER=%(upper %(lower %(env USER)))\n",
 	"lower: %(lower foo, bar) %(lower %(TWOARG))\n",
+	"substr-1: %(substr Hello World,0,5) %(substr Hello World,-5,5)\n",
+	"substr-2: %(substr Hello World,-15,-6) %(substr Hello World,6)\n",
+	"substr-3: %(substr Hello World,-99) <%(substr Hello World,12,2)>\n",
+	"substr-4: <%(substr Hello World,-22,-11)> %(substr Hello World,-12,5)\n",
 	"no-exp: %%(NOEXPANSION) %NOEXPANSION\n",
 	"empty-1: <%()>\n",
 	"empty-2: <%( )>\n",
